--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -12,5 +12,19 @@ library
   exposed-modules: RocketEquation
   ghc-options: -Wall -fwarn-tabs
   build-depends: base >=4.7 && <5, hspec
-  hs-source-dirs: ./src 
+  hs-source-dirs: src
   default-language: Haskell2010
+
+test-suite spec
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs: test
+  ghc-options: -Wall
+  build-depends:
+      base ==4.*
+    , hspec ==2.*
+    , AdventOfCode
+  other-modules:
+      RocketEquationSpec
+  default-language: Haskell2010
+  build-tool-depends: hspec-discover:hspec-discover == 2.*
