--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -9,7 +9,9 @@ build-type: Simple
 cabal-version: >=1.10
 
 library
-  exposed-modules: RocketEquation
+  exposed-modules:
+    AoC1.RocketEquation
+    AoC2.ProgramAlarm
   ghc-options: -Wall -fwarn-tabs
   build-depends: base >=4.7 && <5, hspec
   hs-source-dirs: src
@@ -18,13 +20,15 @@ library
 test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
-  hs-source-dirs: test
+  hs-source-dirs:
+    test
   ghc-options: -Wall
   build-depends:
       base ==4.*
     , hspec ==2.*
     , AdventOfCode
   other-modules:
-      RocketEquationSpec
+    AoC1.RocketEquationSpec
+    AoC2.ProgramAlarmSpec
   default-language: Haskell2010
   build-tool-depends: hspec-discover:hspec-discover == 2.*
