--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -13,7 +13,7 @@ library
     AoC1.RocketEquation
     AoC2.ProgramAlarm
   ghc-options: -Wall -fwarn-tabs
-  build-depends: base >=4.7 && <5, hspec
+  build-depends: base >=4.7 && <5, hspec, split
   hs-source-dirs: src
   default-language: Haskell2010
 
