--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -12,8 +12,9 @@ library
   exposed-modules:
     AoC1.RocketEquation
     AoC2.ProgramAlarm
+    AoC3.CrossedWires
   ghc-options: -Wall -fwarn-tabs
-  build-depends: base >=4.7 && <5, hspec, split
+  build-depends: base >=4.7 && <5, hspec, split, containers
   hs-source-dirs: src
   default-language: Haskell2010
 
@@ -30,5 +31,6 @@ test-suite spec
   other-modules:
     AoC1.RocketEquationSpec
     AoC2.ProgramAlarmSpec
+    AoC3.CrossedWiresSpec
   default-language: Haskell2010
   build-tool-depends: hspec-discover:hspec-discover == 2.*
