--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -13,8 +13,9 @@ library
     AoC1.RocketEquation
     AoC2.ProgramAlarm
     AoC3.CrossedWires
+    AoC4.SecureContainer
   ghc-options: -Wall -fwarn-tabs
-  build-depends: base >=4.7 && <5, hspec, split, containers
+  build-depends: base >=4.7 && <5, hspec, split, containers, regex-tdfa, regex-tdfa-text, regex 
   hs-source-dirs: src
   default-language: Haskell2010
 
