--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -18,6 +18,7 @@ library
         AoC5.Asteroids
         Common.Utils
         AoC6.OrbitMap
+        AoC7.Amplification
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options: -Wall -fwarn-tabs
@@ -41,6 +42,7 @@ test-suite spec
         Common.IntcodeSpec
         AoC5.AsteroidsSpec
         AoC6.OrbitMapSpec
+        AoC7.AmplificationSpec
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
