--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -20,6 +20,7 @@ library
         AoC6.OrbitMap
         AoC7.Amplification
         AoC8.SpaceImageFormat
+        AoC9.SensorBoost
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options: -Wall -fwarn-tabs
@@ -44,7 +45,7 @@ test-suite spec
         AoC5.AsteroidsSpec
         AoC6.OrbitMapSpec
         AoC7.AmplificationSpec
-        AoC8.SpaceImageFormatSpec
+        AoC9.SensorBoostSpec
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
