--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -21,6 +21,7 @@ library
         AoC7.Amplification
         AoC8.SpaceImageFormat
         AoC9.SensorBoost
+        AoC10.MonitoringStations
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options: -Wall -fwarn-tabs
@@ -29,7 +30,8 @@ library
         hspec -any,
         split -any,
         containers -any,
-        array -any
+        array -any,
+        linear -any
 
 test-suite spec
     type: exitcode-stdio-1.0
@@ -42,10 +44,12 @@ test-suite spec
         AoC3.CrossedWiresSpec
         AoC4.SecureContainerSpec
         Common.IntcodeSpec
+        Common.IntcodeUtils
         AoC5.AsteroidsSpec
         AoC6.OrbitMapSpec
         AoC7.AmplificationSpec
         AoC9.SensorBoostSpec
+        AoC10.MonitoringStationsSpec
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
