--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -23,6 +23,7 @@ library
         AoC8.SpaceImageFormat
         AoC9.SensorBoost
         AoC10.MonitoringStations
+        AoC11.SpacePolice
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options: -Wall -fwarn-tabs
@@ -52,6 +53,7 @@ test-suite spec
         AoC7.AmplificationSpec
         AoC9.SensorBoostSpec
         AoC10.MonitoringStationsSpec
+        AoC11.SpacePoliceSpec
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
