--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -25,6 +25,7 @@ library
         AoC10.MonitoringStations
         AoC11.SpacePolice
         AoC12.NBody
+        AoC13.CarePackage
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options: -Wall -fwarn-tabs
@@ -56,6 +57,7 @@ test-suite spec
         AoC10.MonitoringStationsSpec
         AoC11.SpacePoliceSpec
         AoC12.NBodySpec
+        AoC13.CarePackageSpec
     default-language: Haskell2010
     ghc-options: -Wall
     build-depends:
