--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -6,7 +6,6 @@ author: Raffles
 maintainer: 
 category: Text
 build-type: Simple
-cabal-version: >=1.10
 
 library
     exposed-modules:
@@ -26,6 +25,7 @@ library
         AoC11.SpacePolice
         AoC12.NBody
         AoC13.CarePackage
+        AoC14.SpaceFuel
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options: -Wall -fwarn-tabs
