--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -26,6 +26,7 @@ library
         AoC12.NBody
         AoC13.CarePackage
         AoC14.SpaceFuel
+        AoC15.Oxygen
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options: -Wall -fwarn-tabs
@@ -36,7 +37,8 @@ library
         containers -any,
         array -any,
         linear -any,
-        lens -any
+        lens -any,
+        random -any
 
 test-suite spec
     type: exitcode-stdio-1.0
